# subsciption_platform_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 137ce27e60cd_add_user_session.py  64dbb5bffbd9_add_created_at_first_name_last_name_to_.py  bcc988144db1_add_subscription_plan.py
app/: dependencies.py  utils.py
app/application/dto/: plan.py  session.py  subscription.py  user.py
app/application/ports/: uow.py
app/application/use_cases/: __init__.py  create_plan.py  create_subscription.py  create_user.py  session_create.py
app/config/: __init__.py  settings.py
app/domain/: exceptions.py
app/domain/entities/: __init__.py  plan.py  session.py  subscription.py  user.py
app/domain/exceptions/: base.py  plan.py  session.py  subscription.py  user.py
app/domain/interfaces/: plan.py  session.py  subscription.py  transfer.py  user.py
app/dto/: user.py
app/infrastructure/: exceptions.py
app/infrastructure/impl/sqla/: __init__.py  plan.py  session.py  subscription.py  user.py
app/infrastructure/mappers/sqla/: __init__.py  base.py  plan.py  session.py  (+2 more)
app/infrastructure/uow/: sqla.py
app/interfaces/: session.py  user.py
app/models/: __init__.py  base.py  plan.py  subscription.py  user.py
app/repos/: __init__.py  session.py  user.py
app/routes/v1/: session.py  user.py
app/use_cases/: __init__.py  create_user.py  session_create.py
tests/: conftest.py  db.py
tests/integtration/: test_users_api.py
(+11 files in other folders)
