[project]
name = "subscription_platform_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=25.12.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "itsdangerous>=2.2.0",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dependency>=0.6.0",
    "python-multipart>=0.0.21",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
